[package]
name = "your-llm-chat"
version = "0.1.0"
edition = "2021"
authors = ["oblivisheee"]
description = "Tool for creating and interacting with AI chats."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = {version = "0.4.38", features = ["serde"]}
env_logger = "0.11.3"
log = "0.4.21"
openai-api-rs = "4.0.9"
serde = "1.0.203"
serde_json = "1.0.117"
